# clean_eeg

./: .gitignore  LICENSE  README.md  TODO.md  environment.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/plans/: llm-redaction.md  text-phi-redaction.md
data/: annotation_vocab_whitelist.json
scripts/: build_whitelist.py  print_edf_header.py
scripts/text_phi/: __init__.py  audit.py  cli.py  detectors.py  dtypes.py  name_parse.py  records.py  redactor.py  schema.py
scripts/text_phi/formats/: __init__.py  base.py  csv.py  txt.py
scripts/text_phi/inspect/: __init__.py  column_mapping.py  extract_columns.py  generate_schema.py  inspect_csv.py  preprocess_redcap.py  redcap_meta.py
scripts/text_phi/llm/: README.md  __init__.py  benchmark.py  cache.py  client.py  config.py  record_reviewer.py  response.py  review_report.py  template.py
scripts/text_phi/operations/: __init__.py  base.py  dates.py  llm.py  passthrough.py  phi_scan.py  typed_phi.py
src/clean_eeg/: anonymize.py  benchmark.py  clean_eeg.py  clean_subject_eeg.py  compare_eeg.py  detect_name.py  load_eeg.py  log.py  modify_edf_inplace.py  names.py  paths.py  print_edf_header.py  repair_edf.py  split_discontinuous_edf.py  whitelist.py
src/clean_eeg/audit/: __init__.py  annotations.py  checks.py  cli.py  hashes.py  logs.py  name_dictionary.py  notebook.py  select.py  signals.py  subject.py
tests/: config.json  conftest.py  generate_edf.py  test_anonymize.py  test_audit.py  test_benchmark.py  test_benchmark_pipeline.py  test_clean_eeg.py  test_clean_subject_eeg.py  test_detect_name.py  test_load_eeg.py  test_log.py  test_modify_edf_inplace.py  test_print_edf_header.py  test_repair_edf.py  test_split_discontinuous_eeg.py
tests/text_phi/: conftest.py  test_audit.py  test_cli.py  test_csv_format.py  test_detectors.py  test_dtypes.py  test_formats_registry.py  test_name_parse.py  test_records.py  test_redactor.py  test_roundtrip_matrix.py  test_schema.py  test_txt_format.py
tests/text_phi/test_inspect/: test_column_mapping.py  test_generate_schema.py  test_inspect_csv.py  test_redcap_meta.py
tests/text_phi/test_llm/: test_benchmark.py  test_cache.py  test_client.py  test_config.py  test_llm_operation.py  test_prompt_registry.py  test_record_reviewer.py  test_response.py  test_review_report.py  test_template.py
tests/text_phi/test_operations/: conftest.py  test_dates.py  (+3 more)
(+5 files in other folders)
