[build-system]
requires = ["setuptools>=70", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "clean_eeg"
dynamic = ["version"]  # <-- version comes from git tags
description = "Package for de-identifying clinical EEG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Riley DeHaan"}]
dependencies = [
    "pyedflib>=0.1.42",
    "lunapi==1.2.3",
    "numpy>=2.3.2",
    "presidio-analyzer",
    "presidio-anonymizer",
    "rapidfuzz",
    "nicknames",
    "regex",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# setuptools-scm config
[tool.setuptools_scm]
# Require tags like v1.2.3
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
# Benchmark tests generate larger EDF fixtures and exercise the full
# pipeline end-to-end; they are opt-in only. Default test runs skip them.
# Run explicitly with:  pytest -m benchmark  or  pytest -m benchmark_heavy
markers = [
    "benchmark: small (~30 MB) pipeline benchmark (not run by default)",
    "benchmark_heavy: large (~150 MB, many annotations) benchmark; minutes + GB of RAM",
]
addopts = "-m 'not benchmark and not benchmark_heavy'"
